# phyclone

./: .gitignore  MANIFEST  README.md  README.txt  environment.yaml  pyproject.toml  requirements.txt  setup.py
examples/: basic.py  cherry.py  marginal_sampler.py  metrics.py  mixing.py  smc.py  subtree.py  toy_data.py  unindentifiable.py
examples/data/: mixing.tsv  mixing_clusters.tsv  mixing_small.tsv  mixing_small_clusters.tsv
fscrp/: concentration.py  graph_utils.py  math_utils.py  tree.py
fscrp/kernels/marginal/: base.py  bootstrap.py  data_structures.py  fully_adapted.py  semi_adapted.py
fscrp/samplers/: adaptive.py  particle_gibbs.py  swarm.py
fscrp/tests/: test_sigma_sampling.py
lib/fscrp/: __init__.py  adaptive_sampler.py  consensus.py  data_structures.py  graph_utils.py  implicit_sampler.py  kernels.py  math_utils.py  particle_utils.py  sampler.py  simulate.py  swarm.py  tree.py  utils.py
lib/fscrp/kernels/: __init__.py  base.py  bootstrap.py  marginal.py  marginal_adaptive.py  semi_adapted.py
lib/fscrp/kernels/marginal/: base.py  data_structures.py  utils.py
lib/fscrp/samplers/: adaptive.py  implicit.py  particle_gibbs.py  swarm.py
lib/tests/: test_forest.py  test_particle.py  test_sampler.py
phyclone/: cli.py  concentration.py  consensus.py  data.py  exceptions.py  map.py  math_utils.py  metrics.py  particle_utils.py  process_trace.py  run.py  trace.py  tree.py  tree_utils.py  utils.py
phyclone/data/: __init__.py  base.py  cluster_outlier_probabilities.py  data.py  pyclone.py
phyclone/kernels/marginal/: base.py  bootstrap.py  data_structures.py  fully_adapted.py  semi_adapted.py  utils.py
phyclone/mcmc/: __init__.py  concentration.py  gibbs_mh.py  metropolis_hastings.py  particle_gibbs.py
phyclone/process_trace/: __init__.py  consensus.py  map.py  process_trace.py  utils.py
phyclone/samplers/: adaptive.py  particle_gibbs.py  swarm.py
phyclone/smc/: swarm.py  utils.py
phyclone/smc/kernels/: __init__.py  adaptive_flip.py  base.py  bootstrap.py  fully_adapted.py  semi_adapted.py
phyclone/smc/samplers/: __init__.py  adaptive.py  base.py  conditional.py  particle_gibbs.py  standard.py  unconditional.py
phyclone/smc/swarm/: __init__.py  particle.py  swarm.py  tree_holder.py
phyclone/tests/: data.py  exact_posterior.py  fscrp.py  importance_sampler.py  old_implementations.py  simulate.py  test_fft_convolve.py  test_log_convolve.py  test_marginalisation.py  test_pg_posterior.py  test_pg_subtree_posterior.py  test_posterior.py  test_proposal_caching.py  test_prune_regraph_sampler.py  test_root_term.py  test_rustworkx.py  test_sigma_sampling.py  test_subtree.py  test_tree.py  test_tree_log_p.py  toy_data.py
phyclone/tree/: __init__.py  distributions.py  tree.py  tree_node.py  tree_utils.py  utils.py  visitors.py
phyclone/utils/: dev.py  exceptions.py  math.py  utils.py
