[build-system]
requires = ["setuptools >= 61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "PhyClone"
version = "0.5.1"
description='A method for inferring clonal phylogenies from bulk SNV data.'
authors = [
    {name = "Andrew Roth", email = "aroth@bccrc.ca"},
    {name = "Emilia Hurtado", email = "ehurtado@bccrc.ca"}
]
maintainers = [
  {name = "Emilia Hurtado", email = "ehurtado@bccrc.ca"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba",
    "numpy",
    "scipy",
    "click",
    "xxhash",
    "networkx",
    "rustworkx",
    "pandas"
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.urls]
Repository = "https://github.com/Roth-Lab/PhyClone.git"

[project.scripts]
phyclone = "phyclone.cli:main"

[tool.black]
line-length = 120

[tool.setuptools.packages.find]
exclude = ["*.tests*", "*examples*"]
