[build-system]
requires = ["setuptools >= 61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "PhyClone"
version = "0.5.1"
description='Accurate Bayesian reconstruction of cancer phylogenies from bulk sequencing.'
authors = [
    {name = "Andrew Roth", email = "aroth@bccrc.ca"},
    {name = "Emilia Hurtado", email = "ehurtado@bccrc.ca"}
]
maintainers = [
  {name = "Emilia Hurtado", email = "ehurtado@bccrc.ca"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba",
    "numpy>=1.26.4",
    "scipy",
    "click",
    "xxhash>=3.3.0",
    "networkx",
    "rustworkx>=0.15.1",
    "pandas>=2.2.2"
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[project.urls]
Repository = "https://github.com/Roth-Lab/PhyClone.git"

[project.scripts]
phyclone = "phyclone.cli:main"

[tool.black]
line-length = 120

[tool.setuptools.packages.find]
exclude = ["*.tests*", "*examples*"]
